Closed Bug 787757 Opened 13 years ago Closed 13 years ago

Multiple startup hangs of >10 minutes

Categories

(Core :: Networking, defect)

16 Branch
x86_64
Windows 7
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla18
Tracking Status
firefox16 + fixed
firefox17 + fixed
firefox18 + fixed

People

(Reporter: jaws, Assigned: emk)

References

Details

(Keywords: hang, regression, Whiteboard: [qa-])

Attachments

(3 files, 1 obsolete file)

I brought my Win7 laptop home and connected it to the wifi network and have been having nonstop hangs, sometimes reaching >10 minutes, since connecting it to the network. mozregression shows this pushlog: > http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=3f408698a03f&tochange=da8c6039c25e My guess is that this regression is from bug 563169. I will do a further bisect to confirm.
Bug 774242 seems similar to this bug, but I'm seeing this issue on Nightly 18 so I don't think it is the same.
Confirmed that this bug exists in Firefox Nightly 9/1/2012. I used Firefox 15 Release to load the profile and switched the proxy setting to "No proxy" from "Use system proxy" and the hangs went away. In Internet Explorer's Internet Options, the LAN Settings is set to "Automatically detect settings" and the proxy server checkbox is unchecked.
Switching back to "Use system proxy" reproduces the issue. I did use Fiddler two days ago and I see that https://bugzilla.mozilla.org/show_bug.cgi?id=563169#c3 mentions Fiddler's use of the system proxy. Fiddler isn't currently running.
Hoping Jim can take a look and get this to the right person, we'll track this for Beta and branches.
Assignee: nobody → jmathies
Any chance you could get a stack of the hang?
Here's a stack of the main thread, http://pastebin.mozilla.org/1805836
The default is now to use the system proxy, so this should probably be pretty high priority -- I've already had one family member support request about the 16 beta being unusable due to this.
Thanks Jared, can you post your build id info? Masatoshi, this appears to be additional fallout related to bug 563169 which might already be fixed, not sure.
This is from about:buildconfig, not sure if you were looking for something different. http://pastebin.mozilla.org/1806037
Severity: normal → critical
Using INTERNET_PER_CONN_FLAGS_UI may solve the issue. http://stackoverflow.com/questions/2871510/unable-to-query-proxy-automatically-detect-settings-on-windows-7 If it doesn't help, I propose reverting bug 563169 and bug 771115.
I believe this is a duplicate of bug 769764
(In reply to Taras Glek (:taras) from comment #11) > I believe this is a duplicate of bug 769764 not at 10 minutes its not :( ... moving that to another thread isn't going to help.
but to the extent that some delay is inherent, yes 769764 is the answer.
(In reply to Masatoshi Kimura [:emk] from comment #10) > Using INTERNET_PER_CONN_FLAGS_UI may solve the issue. > http://stackoverflow.com/questions/2871510/unable-to-query-proxy- > automatically-detect-settings-on-windows-7 > If it doesn't help, I propose reverting bug 563169 and bug 771115. Can we spin up a try build for jaws to try out?
I am no longer at my parent's home and can't reproduce this on Nightly 9-06 with Use System Settings. I think it is a combination of the Use System Settings and the network that is at my parent's home. Unfortunately I won't be back at their home again within the next couple months.
Attached patch Backout patch (obsolete) — Splinter Review
Due to inability of testing, I propose backout.
Attachment #660099 - Flags: review?(jmathies)
I thought I commented in the other bug, or maybe via email -- my dad tested the builds, and they fixed the problem for him.
Hm, then let's try this.
Attachment #660099 - Attachment is obsolete: true
Attachment #660099 - Flags: review?(jmathies)
Attachment #660104 - Flags: review?(jmathies)
(In reply to Vladimir Vukicevic [:vlad] [:vladv] from comment #20) > I thought I commented in the other bug, or maybe via email -- my dad tested > the builds, and they fixed the problem for him. I'm confused, which build did your dad test Vlad? I don't see try builds posted here with the INTERNET_PER_CONN_FLAGS_UI option, so I'm not sure why we expect that to fix the problem. Plus Jared can't test per comment 16. Maybe a backout, at least on beta, is the right next step until we can figure out how to reproduce the hanging problem and use that to test potential fixes.
Comment on attachment 660104 [details] [diff] [review] Use INTERNET_PER_CONN_FLAGS_UI if available Ok!
Attachment #660104 - Flags: review?(jmathies) → review+
it sounds like (from http://msdn.microsoft.com/en-us/library/windows/desktop/aa385145%28v=vs.85%29.aspx) that INTERNET_PER_CONN_FLAGS_UI is only avail on >= windows 7. Shouldn't we fallback to the fast (but somewhat incomplete) old registry code if *_UI isn't available rather than the version that is causing this problem? I'm all for trying to make this work when UI is available.
If the system doesn't support SmartWPAD, the hung should not occur. Are there any reports from <=Vista users? @vlad: What version of Windows your father is using?
josh and taras had thousands of chrome hangs.. I don't know if they have a OS breakdown
Keywords: hang
(In reply to Patrick McManus [:mcmanus] from comment #28) > josh and taras had thousands of chrome hangs.. I don't know if they have a > OS breakdown 98% of hang reports involving ReadInternetOption or IsWpadEnabledForConnectedNetworks are from Windows 7, but we do have 472 reports of hangs with the following stacks from Windows Vista machines: IsWpadEnabledForConnectedNetworks(int *) (in WININET.dll) -> NETWORK_MANAGER::GetWpadDecisionForRegKeyId(HKEY__ *,NETWORK_MANAGER::WPAD_NETWORK_INFO *) (in WININET.dll) -> ICSTRING::Strnicmp(char const *,unsigned long) (in WININET.dll) -> QueryPerConnOptions(void *,INTERNET_PER_CONN_OPTION_LISTA *) (in WININET.dll) -> ReadInternetOption (in xul.dll) -> nsWindowsSystemProxySettings::GetProxyForURI(nsIURI *,nsACString_internal &) (in xul.dll) -> nsProtocolProxyService::Resolve_Internal(nsIURI *,nsProtocolInfo const &,unsigned int,bool *,nsIProxyInfo * *) (in xul.dll) -> nsProtocolProxyService::Resolve(nsIURI *,unsigned int,nsIProxyInfo * *) (in xul.dll) -> nsIOService::LookupProxyInfo(nsIURI *,nsIURI *,unsigned int,nsCString *,nsIProxyInfo * *) (in xul.dll) -> nsIOService::NewChannelFromURIWithProxyFlags(nsIURI *,nsIURI *,unsigned int,nsIChannel * *) (in xul.dll) and ReadInternetOption (in xul.dll) -> nsWindowsSystemProxySettings::GetPACURI(nsACString_internal &) (in xul.dll) -> nsProtocolProxyService::Resolve_Internal(nsIURI *,nsProtocolInfo const &,unsigned int,bool *,nsIProxyInfo * *) (in xul.dll) -> nsProtocolProxyService::Resolve(nsIURI *,unsigned int,nsIProxyInfo * *) (in xul.dll) -> nsIOService::LookupProxyInfo(nsIURI *,nsIURI *,unsigned int,nsCString *,nsIProxyInfo * *) (in xul.dll) -> nsIOService::NewChannelFromURIWithProxyFlags(nsIURI *,nsIURI *,unsigned int,nsIChannel * *) (in xul.dll) -> nsIOService::NewChannelFromURI(nsIURI *,nsIChannel * *) (in xul.dll) -> NS_NewChannel(nsIChannel * *,nsIURI *,nsIIOService *,nsILoadGroup *,nsIInterfaceRequestor *,unsigned int,nsIChannelPolicy *) (in xul.dll) -> nsXMLHttpRequest::Open(nsACString_internal const &,nsACString_internal const &,bool,mozilla::dom::Optional<nsAString_internal> const &,mozilla::dom::Optional<nsAString_internal> const &) (in xul.dll) -> nsXMLHttpRequest::Open(nsAString_internal const &,nsAString_internal const &,bool,mozilla::dom::Optional<nsAString_internal> const &,mozilla::dom::Optional<nsAString_internal> const &,mozilla::ErrorResult &) (in xul.dll) There are also ~200 hangs on Windows XP containing frames like these: InternetGetConnectedStateExW (in WININET.dll) -> ReadInternetOption (in xul.dll) -> nsWindowsSystemProxySettings::GetPACURI(nsACString_internal &) (in xul.dll) -> nsProtocolProxyService::Resolve_Internal(nsIURI *,nsProtocolInfo const &,unsigned int,bool *,nsIProxyInfo * *) (in xul.dll) -> nsProtocolProxyService::Resolve(nsIURI *,unsigned int,nsIProxyInfo * *) (in xul.dll) -> nsIOService::LookupProxyInfo(nsIURI *,nsIURI *,unsigned int,nsCString *,nsIProxyInfo * *) (in xul.dll) -> nsIOService::NewChannelFromURIWithProxyFlags(nsIURI *,nsIURI *,unsigned int,nsIChannel * *) (in xul.dll) -> nsIOService::NewChannelFromURI(nsIURI *,nsIChannel * *) (in xul.dll) -> NS_NewChannel(nsIChannel * *,nsIURI *,nsIIOService *,nsILoadGroup *,nsIInterfaceRequestor *,unsigned int,nsIChannelPolicy *) (in xul.dll) -> nsXMLHttpRequest::Open(nsACString_internal const &,nsACString_internal const &,bool,mozilla::dom::Optional<nsAString_internal> const &,mozilla::dom::Optional<nsAString_internal> const &) (in xul.dll)
I'll attach a followup patch replacing fallback back to registry reading.
Keywords: checkin-needed
Whiteboard: [leave open]
Comment on attachment 660101 [details] [diff] [review] Backout patch (for beta) [Approval Request Comment] Bug caused by (feature/regressing bug #): 563169 User impact if declined: Unusable (>10 minutes) hang Testing completed (on m-c, etc.): backout Risk to taking this patch (and alternatives if risky): backout String or UUID changes made by this patch: no Simple backout would be safer for branches.
Attachment #660101 - Flags: approval-mozilla-beta?
Attachment #660100 - Flags: approval-mozilla-aurora?
Attachment #660100 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Attachment #660101 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment on attachment 660104 [details] [diff] [review] Use INTERNET_PER_CONN_FLAGS_UI if available Green on Try (I ran tests too just to be safe). https://tbpl.mozilla.org/?tree=Try&rev=03f048437c71 https://hg.mozilla.org/integration/mozilla-inbound/rev/a09d350021f0
Attachment #660104 - Flags: checkin+
Branch patches also need to land.
Keywords: checkin-needed
Whiteboard: [leave open] → [leave open][land branch patches]
Attachment #660100 - Flags: checkin?
Attachment #660101 - Flags: checkin?
Blocks: 781732
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Whiteboard: [leave open][land branch patches]
Assignee: jmathies → VYV03354
Target Milestone: --- → mozilla18
Jared, are you able to reproduce these hangs anymore on your laptop? This should be fixed with today's Aurora and Nightly builds. I'm not sure if it made the uplift to 16b4 in time.
This is in b4.
Flagging [qa-] since we don't have a reproducible testcase. Jared, can you please test this with Firefox 16 and 17 on your laptop to see if has been resolved?
Whiteboard: [qa-]
I think Vlad is in a better position than myself to confirm this.
I haven't heard about any further issues in 16, though I'll double check.
Attachment #660101 - Flags: checkin?
Attachment #660100 - Flags: checkin?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: