Bug 787757 - Use INTERNET_PER_CONN_FLAGS_UI if available. r=jimm